// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`zos-workflows delete archived-workflow definition should not have changed 1`] = `
Object {
  "aliases": Array [
    "aw",
  ],
  "description": "Delete an archived workflow instance in z/OSMF",
  "examples": Array [
    Object {
      "description": "To delete an archived workflow instance in z/OSMF with workflow key \\"d043b5f1-adab-48e7-b7c3-d41cd95fa4b0\\"",
      "options": "--workflow-key \\"d043b5f1-adab-48e7-b7c3-d41cd95fa4b0\\"",
    },
    Object {
      "description": "To delete an archived workflow instance in z/OSMF with workflow name \\"testWorkflow\\"",
      "options": "--workflow-name \\"testWorkflow\\"",
    },
  ],
  "name": "archived-workflow",
  "options": Array [
    Object {
      "aliases": Array [
        "wk",
      ],
      "description": "Delete archived workflow by specified workflow key",
      "name": "workflow-key",
      "required": false,
      "type": "string",
    },
    Object {
      "absenceImplications": Array [
        "workflow-key",
      ],
      "aliases": Array [
        "wn",
      ],
      "conflictsWith": Array [
        "workflow-key",
      ],
      "description": "Delete an archived workflow by specified workflow name",
      "name": "workflow-name",
      "required": false,
      "type": "string",
    },
  ],
  "profile": Object {
    "optional": Array [
      "zosmf",
    ],
  },
  "type": "command",
}
`;

exports[`zos-workflows delete archived-workflow definition should not have changed 1`] = `
Object {
  "aliases": Array [
    "arw",
  ],
  "description": "Delete an archived workflow instance in z/OSMF",
  "examples": Array [
    Object {
      "description": "To delete an archived workflow instance in z/OSMF with workflow key \\"d043b5f1-adab-48e7-b7c3-d41cd95fa4b0\\"",
      "options": "--workflow-key \\"d043b5f1-adab-48e7-b7c3-d41cd95fa4b0\\"",
    },
    Object {
      "description": "To delete an archived workflow instance in z/OSMF with workflow name \\"testWorkflow\\"",
      "options": "--workflow-name \\"testWorkflow\\"",
    },
  ],
  "name": "archived-workflow",
  "options": Array [
    Object {
      "aliases": Array [
        "wk",
      ],
      "description": "Delete an archived workflow by specified workflow key",
      "name": "workflow-key",
      "required": false,
      "type": "string",
    },
    Object {
      "absenceImplications": Array [
        "workflow-key",
      ],
      "aliases": Array [
        "wn",
      ],
      "conflictsWith": Array [
        "workflow-key",
      ],
      "description": "Delete an archived workflow by specified workflow name",
      "name": "workflow-name",
      "required": false,
      "type": "string",
    },
  ],
  "profile": Object {
    "optional": Array [
      "zosmf",
    ],
  },
  "type": "command",
}
`;
